--- a/headerArea_playform/index.html
+++ b/headerArea_playform/index.html
@@ -7,7 +7,7 @@
   <title>Trade Web Page</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/reset.css">
-  <script src="/code.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -81,5 +81,27 @@
       </ul>
     </div>
   </header>
+  <!-- header area -->
+  <div class="slide_wrapper">
+    <div class="pager">
+      <a href="#slide1">1</a>
+      <a href="#slide2">2</a>
+      <a href="#slide3">3</a>
+    </div>
+    <ul class="slide_container">
+      <li class="slide" id="slide1">
+        <h2>Slide 1</h2>
+      </li>
+      <li class="slide" id="slide2">
+        <h2>Slide 2</h2>
+      </li>
+      <li class="slide" id="slide3">
+        <h2>Slide 3</h2>
+      </li>
+    </ul>
+  </div>
+
+  <script src="/code.js"></script>
+
 </body>
 </html>
